src/test/ui/feature-gates/feature-gate-type_ascription.rs
// Type ascription is unstable

fn main() {
    let a = 10: u8; //~ ERROR type ascription is experimental
}
